--- a/public/scss/frontpage_styles.scss
+++ b/public/scss/frontpage_styles.scss
@@ -62,7 +62,7 @@ body {
 .heading {
   font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
   font-weight: 100;
-  font-size: 5.6em;
+  font-size: 6em;
   letter-spacing: 2px;
   color: $white;
   text-align: right;
@@ -146,7 +146,7 @@ footer {
 
 @media all and (max-width: 1024px) {
    .heading {
-      font-size: 4em;
+      font-size: 4.85em;
    }
 }
 
@@ -165,7 +165,7 @@ footer {
    }
 
    .heading {
-      font-size: 3.5em;
+      font-size: 4.8em;
       font-weight: 100;
    }
 
@@ -216,8 +216,7 @@ footer {
    }
 
    .heading {
-      font-family: Helvetica, Arial, sans-serif;
-      font-size: 2.1em;
+      font-size: 3.5em;
    }
 
    .postcode-search  {
@@ -239,15 +238,15 @@ footer {
    }
 }
 
-
-@media all and (max-width: 320px) {
+@media all and (max-width: 480px) {
    .heading {
       position: absolute;
       top: 0;
-      font-family: Helvetica, Arial, sans-serif;
-      font-size: 1.7em;
+      right: 0;
+      font-size: 2.2em;
    }
 }
+
 
 
 @import 'menu_mediaqueries'
