--- a/public/scss/frontpage_styles.scss
+++ b/public/scss/frontpage_styles.scss
@@ -31,6 +31,10 @@ body {
   clear: both;
 }
 
+h1 {
+   margin: 0;
+}
+
 #menu-button.white_text {
    i {
       color: rgba(255,255,255,0.8);
@@ -55,18 +59,33 @@ body {
 .header {
   width: 100%;
   position: absolute;
-  top: 20px;
+  top: 0;
   vertical-align: middle;
 }
 
 .heading {
   font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
   font-weight: 100;
-  font-size: 6em;
   letter-spacing: 2px;
   color: $white;
   text-align: right;
+  line-height: 1em;
   padding-right: 20px;
+  font-size: 3.8em;
+  position: relative;
+  top: 20px;
+  display: inline-block;
+  float: right;
+}
+
+.logo {
+   width: 200px;
+   height: auto;
+   display: inline-block;
+   padding-right: 15px;
+   float: right;
+   position: relative;
+   top: 20px;
 }
 
 .postcode-search {
@@ -146,7 +165,7 @@ footer {
 
 @media all and (max-width: 1024px) {
    .heading {
-      font-size: 4.85em;
+      font-size: 3.8em;
    }
 }
 
@@ -164,10 +183,10 @@ footer {
       left: 120px;
    }
 
-   .heading {
-      font-size: 4.8em;
-      font-weight: 100;
-   }
+   // .heading {
+   //    font-size: 4.8em;
+   //    font-weight: 100;
+   // }
 
    .postcode-search  {
       top: 20%;
@@ -238,15 +257,43 @@ footer {
    }
 }
 
-@media all and (max-width: 480px) {
+@media all and (max-width: 570px) {
    .heading {
-      position: absolute;
-      top: 0;
-      right: 0;
-      font-size: 2.2em;
+      font-size: 2.8em;
+   }
+
+   .logo {
+      width: 170px;
    }
 }
 
+@media all and (max-width: 480px) {
+   .heading {
+      font-size: 2.2em;
+   }
 
+   .logo {
+      width: 90px;
+   }
+}
+
+@media all and (max-width: 320px) {
+   .title {
+      margin: 0;
+      padding: 0;
+   }
+
+   .header {
+      position: relative;
+      top: 0;
+   }
+   .heading {
+      font-size: 1.7em;
+   }
+
+   .logo {
+      width: 80px;
+   }
+}
 
 @import 'menu_mediaqueries'
