--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4563,6 +4563,19 @@ td,
 th {
   padding: 0; }
 
+footer.menu-footer {
+  position: absolute;
+  bottom: 0;
+  font-family: 'Helvetica Neue', sans-serif;
+  font-size: 0.7em;
+  font-weight: 200;
+  color: #f2f2f2;
+  width: 100%;
+  text-align: center; }
+  footer.menu-footer i {
+    font-size: 2em;
+    padding: 5px; }
+
 @media all and (max-width: 768px) {
   .menu {
     display: none; }
@@ -4876,9 +4889,14 @@ th {
     .slidermenu ul li.menu-section:hover > ul.sub-menu {
       position: absolute;
       left: 120px; } }
+* {
+  margin: 0; }
+
+html, body {
+  height: 100%; }
+
 body {
   width: 100%;
-  height: 100%;
   font-size: 100%;
   background-color: #f2f2eb; }
 
@@ -4889,8 +4907,7 @@ body {
 
 .container {
   width: 100%;
-  min-height: 100%;
-  height: auto !important; }
+  min-height: 100%; }
 
 .content {
   height: 100%;
