--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -34,9 +34,16 @@ $minister_dark: darken(#3399cc, 20%);
 $orange: #f8720a;
 $blue: #0072bc;
 
+* {
+   margin: 0;
+}
+
+html, body {
+   height: 100%;
+}
+
 body {
   width: 100%;
-  height: 100%;
   font-size: 100%;
   background-color: $white;
 }
@@ -51,11 +58,7 @@ body {
 
 .container {
    width: 100%;
-   // height: 100%;
-
    min-height: 100%;
-   height: auto !important;
-   // margin: 0 auto -2em;
 }
 
 .content {
