Lower House contact form functionality

--- a/public/css/frontpage_styles.css
+++ b/public/css/frontpage_styles.css
@@ -4778,7 +4778,7 @@ footer.menu-footer {
   font-family: 'Helvetica Neue', sans-serif;
   font-size: 0.7em;
   font-weight: 200;
-  color: #f2f2f2;
+  color: #555;
   width: 100%;
   text-align: center; }
   footer.menu-footer i {
