--- a/public/scss/menu_mediaqueries.scss
+++ b/public/scss/menu_mediaqueries.scss
@@ -13,7 +13,7 @@ footer.menu-footer {
    font-family: 'Helvetica Neue', sans-serif;
    font-size: 0.7em;
    font-weight: 200;
-   color: $white;
+   color: #555;
    width: 100%;
    text-align: center;
    i {
