Print email sent to MP

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5221,8 +5221,32 @@ hr.med_grey {
 
 .contact-form-content {
   width: 100%;
-  height: auto;
-  margin-bottom: 50px; }
+  padding-bottom: 100px; }
+  .contact-form-content .s-m-i {
+    text-align: center; }
+    .contact-form-content .s-m-i i {
+      margin: 0 auto;
+      padding: 20px 50px;
+      font-size: 4em;
+      color: #999; }
+  .contact-form-content #print {
+    font-size: 4em;
+    color: #888;
+    margin: 0 0 5px 20px; }
+  .contact-form-content .label {
+    width: 100%;
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 1.1em;
+    color: black;
+    background-color: #ccc;
+    text-align: left;
+    margin-bottom: 10px; }
+  .contact-form-content .contact-text {
+    width: 95%;
+    margin: 0 auto;
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 1em;
+    text-align: left; }
   .contact-form-content .image {
     background-color: transparent; }
     .contact-form-content .image img {
@@ -5827,3 +5851,26 @@ form.selection-form {
   /* View a Politician */
   .pol_info1 {
     font-size: 0.9em; } }
+@media print {
+  .menu,
+  #menu-button,
+  #slider,
+  .slidermenu {
+    display: none; }
+
+  .logo {
+    width: 150px; }
+
+  h1.heading {
+    font-size: 3em;
+    color: black; }
+
+  h3 {
+    font-size: 1.5em;
+    color: black; }
+
+  #print {
+    display: none; }
+
+  .contact-text {
+    font-size: 0.8em; } }
