--- a/public/css/frontpage_styles.css
+++ b/public/css/frontpage_styles.css
@@ -4780,10 +4780,16 @@ footer.menu-footer {
   font-weight: 200;
   color: #555;
   width: 100%;
-  text-align: center; }
+  text-align: center;
+  margin-bottom: 3px;
+  line-height: 1em; }
   footer.menu-footer i {
     font-size: 2em;
     padding: 5px; }
+  footer.menu-footer a {
+    color: #555; }
+    footer.menu-footer a:link, footer.menu-footer a:visited, footer.menu-footer a:hover, footer.menu-footer a:active {
+      color: #555; }
 
 @media all and (max-width: 768px) {
   .menu {
