--- a/public/scss/frontpage_styles.scss
+++ b/public/scss/frontpage_styles.scss
@@ -76,6 +76,16 @@ h1 {
   top: 20px;
   display: inline-block;
   float: right;
+  a {
+     text-decoration: none;
+     color: $white;
+     &:link,
+     &:visited,
+     &:hover,
+     &:active {
+        color: $white;
+     }
+  }
 }
 
 .logo {
