--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -152,14 +152,13 @@ h3 {
 .header {
    position: absolute;
    top: 0;
-   z-index: 0;
+   z-index: 5;
 }
 
 .heading {
   font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
   font-weight: 100;
   letter-spacing: 2px;
-  color: $dark_text;
   text-align: right;
   line-height: 1em;
   padding-right: 20px;
@@ -168,6 +167,16 @@ h3 {
   top: 20px;
   display: inline-block;
   float: right;
+  a {
+     text-decoration: none;
+     color: $dark_text;
+     &:link,
+     &:visited,
+     &:hover,
+     &:active {
+        color: $dark_text;
+     }
+  }
 }
 
 .logo {
@@ -186,9 +195,9 @@ h3 {
   font-size: 2.2em;
 }
 
-/* About Us Page */
+/* About Us, Privacy Policy Pages */
 
-.text-box {
+.text-page {
    width: 84%;
    margin: 20px auto;
    text-align: justify;
